seafile/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile
  namespace: seafile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile
  template:
    metadata:
      labels:
        app: seafile
    spec:
      containers:
        - name: seafile
          image: seafileltd/seafile-mc:13.0-latest
          volumeMounts:
            - name: seafile-data
              mountPath: /shared
      volumes:
        - name: seafile-data
          persistentVolumeClaim:
            claimName: seafile-data
      restartPolicy: Alway
